# refnd

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: build-wheels.yml
py/: CLAUDE.md  Cargo.toml  LONG_DESC.md  README.md  build_backend.py  pyproject.toml
py/docs/source/: conf.py  index.md
py/docs/source/_static/css/: copy_markdown.css
py/docs/source/_static/js/: copy_markdown.js
py/docs/source/api/: core.md  kernels.md  utils.md
py/python/refnd/: __init__.py  __init__.pyi
py/python/refnd/core/: __init__.pyi
py/python/refnd/kernels/: __init__.pyi
py/python/refnd/kernels/molecules/: __init__.pyi
py/python/refnd/kernels/protein/: __init__.pyi
py/python/refnd/kernels/protein/sequence/: __init__.pyi
py/python/refnd/utils/: __init__.pyi
py/src/: lib.rs  utils.rs
py/src/core/: _utils.rs  edge_store.rs  exact.rs  functional.rs  hnsw.rs  leiden.rs  mod.rs
py/src/kernels/: mod.rs
py/src/kernels/molecules/: mod.rs
py/src/kernels/protein/: sequence.rs
pytests/: index.hnsw  main.py  pyproject.toml  test_exact.py  test_hnsw.py  test_index.py  test_tanimoto.py
rdkit-sys-patched/: .cargo_vcs_info.json  Cargo.toml  build.rs
refnd/: CLAUDE.md  Cargo.toml  PLAN.md
refnd/llm_docs/rich_rust/: 00_preamble.md  00_table_of_contents.md  01_1_color_system.md  02_2_style_system.md  03_3_segment_rendering_atom.md  04_4_markup_parser.md  05_5_measurement_protocol.md  06_6_text_object.md  07_7_console.md  08_8_box_characters.md  09_9_table_layout.md  10_10_panel_padding.md  11_11_alignment_system.md  12_12_unicode_cell_width.md  13_13_text_wrapping.md  14_14_ratio_distribution.md  15_15_exclusions_and_not_yet_implemented_features.md  16_16_live_display_system.md  17_17_layout_system.md  18_18_logging_handler_integration.md  19_19_htmlsvg_export.md  20_appendix_a_rust_trait_summary.md  21_appendix_b_recommended_crate_mappings.md  INDEX.md  README.md
refnd/src/: lib.rs  main.rs
refnd/src/cli/: CLI.md  autocomplete.rs  display.rs  kernel_parameters.rs  mod.rs  parameters.rs  renderer.rs  utils.rs
refnd/src/cli/custer/: mod.rs
refnd/src/cli/edge/: mod.rs
refnd/src/cli/index/: mod.rs
refnd/src/cli/knn/: mod.rs
refnd/src/cli/split/: mod.rs
refnd/src/core/: connected_components.rs  distance.rs  edge_store.rs  mod.rs  partition.rs
refnd/src/core/exact/: exact_edges.rs  exact_nearest_neighbors.rs  mod.rs
refnd/src/core/hnsw/: HNSW.md  build.rs  config.rs  hnsw_index.rs  insert.rs  mod.rs  search.rs  search_layer.rs  select_neighbors.rs
refnd/src/core/leiden/: LEIDEN.md  csr_graph.rs  leiden.rs  mod.rs  utils.rs
refnd/src/kernels/: mod.rs
refnd/src/kernels/molecules/: MOLECULE_KERNELS.md  mod.rs
refnd/src/kernels/molecules/tanimoto/: mod.rs
refnd/src/kernels/proteins/: PROTEIN_KERNELS.md  mod.rs
refnd/src/kernels/proteins/parasail/: aligner_config.rs  global.rs  local.rs  matrix.rs  meta.rs  mod.rs
refnd/src/utils/: fingerprints.rs  mod.rs  read_fasta.rs  read_sdf.rs
