[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "refnd"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
module-name = "refnd"
python-source = "python"
include = ["python/**/*.pyi", "python/**/__init__.py"]

[tool.pyo3-stub-gen]
use-type-statement = true

[dependency-groups]
docs = [
    "furo>=2025.12.19",
    "myst-parser>=5.0.0",
    "sphinx>=9.1.0",
    "sphinx-autodoc-typehints>=3.10.2",
]
