[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "refnd"
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
module-name = "refnd"
python-source = "python"
include = ["python/**/*.pyi", "python/**/__init__.py"]
before-build = "cp ../README.md README.md"

[tool.pyo3-stub-gen]
use-type-statement = true

[dependency-groups]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=3.0.1",
    "sphinx>=7.4.7",
    "sphinx-autodoc-typehints>=2.5.0",
]
