[build-system]
requires = ["maturin>=1.11,<2.0", "hatchling"]
build-backend = "maturin"

[project]
name = "refnd"
requires-python = ">=3.10"
readme = "LONG_DESC.md"
description = "Sample Relation Finder; Efficient thresholded proximity graph computation; RGP toolkit."
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.hatch.build.hooks.custom]

[tool.maturin]
module-name = "refnd"
python-source = "python"
include = ["python/**/*.pyi", "python/**/__init__.py"]

[tool.pyo3-stub-gen]
use-type-statement = true

[dependency-groups]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=3.0.1",
    "sphinx>=7.4.7",
    "sphinx-autodoc-typehints>=2.5.0",
]
